Fix : text overflow in fulfillments results page

--- a/public/css/pages/fieldsresult.css
+++ b/public/css/pages/fieldsresult.css
@@ -1,20 +1,27 @@
 .take {
     width: 20%;
-    margin: 40px;
+    margin: 0;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .content {
-    width: 70%;
+    max-width: 700px;
     padding-left: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+}
+
+
+tbody{
+    width: 100%;
 }
 
 table {
     width: 100%;
-    margin: 0 auto;
+    border-collapse: collapse;
 }
 
 a {
@@ -28,5 +35,10 @@ a:hover {
 }
 
 tr {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
     border-bottom: 1px solid var(--gray);
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
